[metadata]
name = CatApp_RAPHAELA_V
version = 0.0.1
author = Raphaela Vergud
author_email = raphaelavergud@icloud.com
description = A practice package of my cat app.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/raphaelavergud/CatApp
project_urls =
    Bug Tracker = https://github.com/raphaelavergud/CatApp/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src